# RN-store

./: CMakeLists.txt  Makefile  README.md  client  server
include/: rdma.h
src/: Makefile  client  client.c  rdma.c  server  server.c
tmp/file/: a.out  main.c
